internal/gatewayapi/testdata/backendtrafficpolicy-selector-no-match.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: listener-1
      protocol: HTTP
      port: 8081
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
    labels:
      app: real-label
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: listener-1
    rules:
    - matches:
      - path:
          value: "/foo"
      backendRefs:
      - name: service-1
        port: 8080
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-with-unmatched-selector
  spec:
    targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        app: no-such-label
    timeout:
      tcp:
        connectTimeout: 15s
